implement filter by name

--- a/src/app/temtem/temtem-list.component.html
+++ b/src/app/temtem/temtem-list.component.html
@@ -30,7 +30,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let temTem of temTems">
+      <tr *ngFor="let temTem of filteredTemTems">
         <td scope="row">
           <img
             [src]="temTem.portraitWikiUrl"
