--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container px-4 px-lg-5">
-    <a class="navbar-brand" href="#page-top">TemCard Plus</a>
+    <a class="navbar-brand" routerLink="/temtems">TemCard Plus</a>
     <button
       class="navbar-toggler navbar-toggler-right"
       type="button"
@@ -15,9 +15,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#about">TemTem</a></li>
         <li class="nav-item">
-          <a class="nav-link" href="#projects">Create a Team</a>
+          <a class="nav-link" routerLink="/temtems">TemTem</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#create">Create a Team</a>
         </li>
         <li class="nav-item"><a class="nav-link" href="#signup">Sign Up</a></li>
       </ul>
@@ -28,6 +30,6 @@
   <div
     class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center"
   >
-    <temtem-list class="container"> </temtem-list>
+    <router-outlet> </router-outlet>
   </div>
 </header>
