--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,9 +19,11 @@
           <a class="nav-link" routerLink="/temtems">TemTem</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/items">Items</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#create">Create a Team</a>
         </li>
-        <li class="nav-item"><a class="nav-link" href="#signup">Sign Up</a></li>
       </ul>
     </div>
   </div>
