--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -1,1 +1,26 @@
-<p>item-list works!</p>
+<div class="table-responsive">
+  <table class="table table-hover table-dark">
+    <thead>
+      <tr>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of items">
+        <td scope="row">
+          <img
+            style="background-color: #fff"
+            [src]="item.largeWikiImageUrl"
+            [alt]="item.name"
+            [style.width.px]="imageWidth"
+            [style.margin.px]="imageMargin"
+          />
+        </td>
+        <td>{{ item.name }}</td>
+        <td>{{ item.description }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
